hphp/test/zend/bad/ext-gd/imageloadfont_error2.php
<?php
var_dump( imageloadfont('\src\invalidfile.font') );
?>